--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -103,9 +103,6 @@
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
-        "# @markdown ### **Experimental Config**\n",
-        "# @markdown > An attempt to fix queue and generate stuck problem\n",
-        "latest_gradio = True  # @param {type:'boolean'}\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -215,26 +212,6 @@
         "            install_webui(overwrite=True)\n",
         "    except Exception as e:\n",
         "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
-        "\n",
-        "def update_gradio_version(repo_dir, desired_version, latest_gradio=False):\n",
-        "    if latest_gradio:\n",
-        "        requirements_file = os.path.join(repo_dir, \"requirements_versions.txt\")\n",
-        "\n",
-        "        with open(requirements_file, \"r\") as f:\n",
-        "            lines = f.readlines()\n",
-        "\n",
-        "        updated_lines = []\n",
-        "        for line in lines:\n",
-        "            if \"gradio\" in line:\n",
-        "                line = f\"gradio=={desired_version}\\n\"\n",
-        "            updated_lines.append(line)\n",
-        "\n",
-        "        with open(requirements_file, \"w\") as f:\n",
-        "            f.writelines(updated_lines)\n",
-        "\n",
-        "        subprocess.run([\"pip\", \"install\", \"--upgrade\", f\"gradio=={desired_version}\"], check=True)\n",
-        "\n",
-        "        print(f\"\u001b[1;32mUpdating Gradio to version '3.31.0'\")\n",
         "                    \n",
         "def main():\n",
         "    global drive_dir\n",
@@ -273,8 +250,6 @@
         "            print(\"\u001b[1;32mCommit hash: \", commit_hash)\n",
         "        except Exception as e:\n",
         "            print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
-        "\n",
-        "    update_gradio_version(repo_dir, \"3.31.0\", latest_gradio=latest_gradio)\n",
         "\n",
         "    if dpm_v2_patch:\n",
         "        with capture.capture_output() as cap:\n",
@@ -415,7 +390,7 @@
         "waifu_diffusion_v1_5_illusion = False  # @param {type: 'boolean'}\n",
         "illuminati_diffusion_v1_1 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **VAE Model**\n",
-        "animevae = False  # @param {type: 'boolean'}\n",
+        "anime = False  # @param {type: 'boolean'}\n",
         "blessed = True  # @param {type: 'boolean'}\n",
         "waifu_diffusion = False  # @param {type: 'boolean'}\n",
         "stable_diffusion = False  # @param {type: 'boolean'}\n",
@@ -435,7 +410,7 @@
         "]\n",
         "\n",
         "vaeList = [\n",
-        "    (\"animevae\", \"https://huggingface.co/Linaqruf/personal-backup/resolve/main/vae/animevae.pt\"),\n",
+        "    (\"anime\", \"https://huggingface.co/Linaqruf/personal-backup/resolve/main/vae/animevae.pt\"),\n",
         "    (\"blessed\", \"https://huggingface.co/NoCrypt/blessed_vae/resolve/main/blessed2.vae.pt\"),\n",
         "    (\"waifu_diffusion\", \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\"),\n",
         "    (\"stable_diffusion\", \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\"),\n",
@@ -715,9 +690,9 @@
         "os.chdir(root_dir)\n",
         "\n",
         "custom_model_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_vae_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/vae/ClearVAE_V2.2.safetensors\"  # @param {'type': 'string'}\n",
+        "custom_vae_url = \"\"  # @param {'type': 'string'}\n",
         "custom_embedding_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_LoRA_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/network_weight/GoodHands-beta2.safetensors, https://huggingface.co/Linaqruf/stolen/resolve/main/network_weight/flatBG.safetensors\"  # @param {'type': 'string'}\n",
+        "custom_LoRA_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/network_weight/GoodHands-beta2.safetensors\"  # @param {'type': 'string'}\n",
         "custom_hypernetwork_url = \"\"  # @param {'type': 'string'}\n",
         "custom_extensions_url = \"\"  # @param {'type': 'string'}\n",
         "custom_upscaler_url = \"\"  # @param {'type': 'string'}\n",
