feat: changed filename pattern to `[model_name]_[seed]`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1062,6 +1062,7 @@
         "config[\"eta_noise_seed_delta\"] = 0\n",
         "config[\"show_progress_every_n_steps\"] = 10\n",
         "config[\"show_progressbar\"] = True\n",
+        "config[\"samples_filename_pattern\"] = \"[model_name]_[seed]\"\n",
         "if \"quicksettings\" in config:\n",
         "    config[\"quicksettings\"] = \"sd_model_checkpoint, sd_vae, CLIP_stop_at_last_layers, use_old_karras_scheduler_sigmas, always_discard_next_to_last_sigma\"\n",
         "elif \"quicksettings_list\" in config:\n",
