feat: added wildcard from `https://github.com/Tsukreya/Umi-AI-debloat`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -98,6 +98,7 @@
         "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-dev\", \"Anapnoe\"]\n",
         "update_webui = False  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
+        "install_wildcard = True #@param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch = False  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
@@ -212,7 +213,31 @@
         "            install_webui(overwrite=True)\n",
         "    except Exception as e:\n",
         "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
-        "                    \n",
+        "\n",
+        "def clone_repo(url, directory):\n",
+        "    if not os.path.exists(directory):\n",
+        "        subprocess.run([\"git\", \"clone\", url, directory], check=True)\n",
+        "\n",
+        "# def install_dynamic_prompts():\n",
+        "#     dynamic_prompts_url = \"https://github.com/adieyal/sd-dynamic-prompts\"\n",
+        "#     dynamic_prompts_dir = os.path.join(extensions_dir, \"sd-dynamic-prompts\")\n",
+        "#     wildcard_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/aojiru_wildcard.zip\"\n",
+        "#     wildcard_dir = os.path.join(dynamic_prompts_dir, \"wildcards\")\n",
+        "\n",
+        "#     clone_repo(dynamic_prompts_url, dynamic_prompts_dir)\n",
+        "    \n",
+        "#     if not os.path.exists(os.path.join(root_dir, \"aojiru_wildcard.zip\")):\n",
+        "#         subprocess.run([\"wget\", wildcard_url], cwd=root_dir, check=True)\n",
+        "#     subprocess.run([\"unzip\", \"-o\", \"aojiru_wildcard.zip\", \"-d\", wildcard_dir], cwd=root_dir, check=True)\n",
+        "\n",
+        "#     subprocess.run([\"python\", \"install.py\"], cwd=dynamic_prompts_dir, check=True)\n",
+        "\n",
+        "def install_umi_ai():\n",
+        "    umi_ai_url = \"https://github.com/Tsukreya/Umi-AI-debloat\"\n",
+        "    umi_ai_dir = os.path.join(extensions_dir, \"Umi-AI-debloat\")\n",
+        "\n",
+        "    clone_repo(umi_ai_url, umi_ai_dir)\n",
+        "\n",
         "def main():\n",
         "    global drive_dir\n",
         "    \n",
@@ -298,6 +323,12 @@
         "    for dir in [\"txt2img-images\", \"img2img-images\", \"extras-images\", \"txt2img-grids\", \"img2img-grids\",]:\n",
         "        os.makedirs(os.path.join(drive_dir, dir), exist_ok=True)\n",
         "\n",
+        "    if install_wildcard:\n",
+        "        # print(\"\u001b[1;32mInstalling 'sd-dynamic-prompts'\")\n",
+        "        # install_dynamic_prompts()\n",
+        "        print(\"\u001b[1;32mInstalling 'Tsukreya/Umi-AI-debloat'\")\n",
+        "        install_umi_ai()\n",
+        "    \n",
         "    skipped_extensions = []\n",
         "    \n",
         "    end_time = time.time()\n",
