feat: added new upscaler models

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -726,7 +726,7 @@
         "custom_LoRA_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/network_weight/GoodHands-beta2.safetensors\"  # @param {'type': 'string'}\n",
         "custom_hypernetwork_url = \"\"  # @param {'type': 'string'}\n",
         "custom_extensions_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_upscaler_url = \"\"  # @param {'type': 'string'}\n",
+        "custom_upscaler_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-Superscale-SP_178000_G.pth, https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-YandereNeoXL_200k.pth\"  # @param {'type': 'string'}\n",
         "\n",
         "custom_download_list = []\n",
         "\n",
