--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -59,6 +59,12 @@
         "from IPython.display import clear_output, display, HTML\n",
         "from IPython.utils import capture\n",
         "from tqdm import tqdm\n",
+        "subprocess.run(['pip', 'install', '--upgrade', 'git+https://github.com/Linaqruf/colablib'])\n",
+        "from colablib.colored_print import cprint\n",
+        "from colablib.utils import py_utils as py_utils\n",
+        "from colablib.utils.ubuntu_utils import ubuntu_deps\n",
+        "from colablib.sd_models.downloader import aria2_download\n",
+        "from colablib.utils.git_utils import update_repo, batch_update, validate_repo\n",
         "\n",
         "%store -r\n",
         "\n",
@@ -90,10 +96,10 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
         "# @markdown ### **Repo Config**\n",
-        "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\", \"Vladmandic\"]\n",
+        "repo_type           = \"AUTOMATIC1111-Dev\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\", \"Vladmandic\"]\n",
         "update_webui        = True  # @param {type:'boolean'}\n",
         "update_extensions   = True  # @param {type:'boolean'}\n",
-        "commit_hash         = \"f2b9c2cb4fa5f0e866c1b6f84e44d12ff6653af3\"  # @param {type:'string'}\n",
+        "commit_hash         = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch        = False  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
@@ -140,112 +146,6 @@
         "        with open(filename, 'w', encoding=\"utf-8\") as f:\n",
         "            f.write(config)\n",
         "\n",
-        "def cprint(*args, color=\"default\", reset=True, tqdm_desc=False):\n",
-        "    color_codes = {\n",
-        "        \"default\"     : \"\\033[0m\",\n",
-        "        \"green\"       : \"\\033[0;32m\",\n",
-        "        \"red\"         : \"\\033[0;31m\",\n",
-        "        \"bold_green\"  : \"\\033[1;32m\",\n",
-        "        \"bold_red\"    : \"\\033[1;31m\",\n",
-        "    }\n",
-        "    \n",
-        "    if color in color_codes:\n",
-        "        color_start = color_codes[color]\n",
-        "        color_end = \"\"\n",
-        "        if reset:\n",
-        "            color_end = color_codes[\"default\"]\n",
-        "        formatted_text = \" \".join(str(arg) for arg in args)\n",
-        "        if tqdm_desc:\n",
-        "            color_end = \"\"\n",
-        "            return color_start + formatted_text + color_end\n",
-        "        else:\n",
-        "            print(color_start + formatted_text + color_end)\n",
-        "    else:\n",
-        "        if tqdm_desc:\n",
-        "            return \" \".join(str(arg) for arg in args)\n",
-        "        else:\n",
-        "            print(*args)\n",
-        "\n",
-        "def get_python_version(verbose=False):\n",
-        "    try:\n",
-        "        if verbose:\n",
-        "            return cprint(f\"Python {sys.version}\", color=\"green\")\n",
-        "        else:  \n",
-        "            version = platform.python_version()\n",
-        "            version_parts = re.match(r'^(\\d+\\.\\d+)', version)\n",
-        "            if version_parts:\n",
-        "                return version_parts.group(1)\n",
-        "            else:\n",
-        "                return None\n",
-        "    except Exception as e:\n",
-        "        cprint(\"Failed to retrieve Python version:\", str(e), color=\"greem\")\n",
-        "        return None\n",
-        "\n",
-        "def get_torch_version():\n",
-        "    try:\n",
-        "        return cprint(f\"Torch {torch.__version__}\", color=\"green\")\n",
-        "    except Exception as e:\n",
-        "        cprint(\"Failed to retrieve PyTorch version:\", str(e), color=\"greem\")\n",
-        "        return None\n",
-        "\n",
-        "def get_gpu_info(get_gpu_name=False):\n",
-        "    command = [\"nvidia-smi\", \"--query-gpu=gpu_name\", \"--format=csv\"]\n",
-        "    result = subprocess.run(command, capture_output=True, text=True)\n",
-        "\n",
-        "    if result.returncode == 0:\n",
-        "        gpu_info = result.stdout.strip()\n",
-        "        if get_gpu_name:\n",
-        "            if 'name' in gpu_info:\n",
-        "                return cprint(\"Current GPU:\", gpu_info[5:], color=\"green\")\n",
-        "        return gpu_info\n",
-        "    else:\n",
-        "        error_message = result.stderr.strip()\n",
-        "        if \"NVIDIA-SMI has failed\" in error_message and \"No devices were found\" in error_message:\n",
-        "            from google.colab import runtime\n",
-        "            runtime.unassign()\n",
-        "            raise RuntimeError(\"No GPU found. Unassigned GPU in Google Colab.\")\n",
-        "        else:\n",
-        "            raise RuntimeError(f\"Command execution failed with error: {error_message}\")\n",
-        "\n",
-        "def get_filename(url):\n",
-        "    response = requests.get(url, stream=True)\n",
-        "    response.raise_for_status()\n",
-        "\n",
-        "    if 'content-disposition' in response.headers:\n",
-        "        content_disposition = response.headers['content-disposition']\n",
-        "        filename = re.findall('filename=\"?([^\"]+)\"?', content_disposition)[0]\n",
-        "    else:\n",
-        "        url_path = urlparse(url).path\n",
-        "        filename = unquote(os.path.basename(url_path))\n",
-        "        \n",
-        "    return filename\n",
-        "\n",
-        "def validate_repo(directory):\n",
-        "    def get_current_commit_hash(directory):\n",
-        "        result = subprocess.run([\"git\", \"rev-parse\", \"HEAD\"], capture_output=True, text=True, cwd=directory)\n",
-        "        return result.stdout.strip()\n",
-        "\n",
-        "    def get_current_branch(directory):\n",
-        "        result = subprocess.run([\"git\", \"rev-parse\", \"--abbrev-ref\", \"HEAD\"], capture_output=True, text=True, cwd=directory)\n",
-        "        return result.stdout.strip()\n",
-        "\n",
-        "    def get_repo_name(directory):\n",
-        "        result = subprocess.run([\"git\", \"config\", \"--get\", \"remote.origin.url\"], capture_output=True, text=True, cwd=directory)\n",
-        "        output = result.stdout.strip()\n",
-        "        if result.returncode == 0 and output:\n",
-        "            url = output\n",
-        "            repo_name = url.split(\"/\")[-1].split(\".\")[0]\n",
-        "            username = url.split(\"/\")[-2]\n",
-        "            return f\"{username}/{repo_name}\"\n",
-        "        else:\n",
-        "            raise ValueError(f\"Failed to get repository name for directory: {directory}\")\n",
-        "\n",
-        "    current_commit_hash = get_current_commit_hash(directory)\n",
-        "    current_branch      = get_current_branch(directory)\n",
-        "    repo_name           = get_repo_name(directory)\n",
-        "\n",
-        "    return repo_name, current_commit_hash, current_branch\n",
-        "\n",
         "def mount_func(directory):\n",
         "    output_dir          = os.path.join(repo_dir, \"outputs\")\n",
         "\n",
@@ -265,57 +165,6 @@
         "                lora_dir, control_dir, esrgan_dir]:\n",
         "        os.makedirs(dir, exist_ok=True)\n",
         "\n",
-        "def ubuntu_deps(url, dst, desc):\n",
-        "    os.makedirs(dst, exist_ok=True)\n",
-        "    filename  = get_filename(url)\n",
-        "    subprocess.run([\"wget\", url], stdout=subprocess.DEVNULL)\n",
-        "\n",
-        "    with zipfile.ZipFile(filename, \"r\") as deps:\n",
-        "        deps.extractall(dst)\n",
-        "\n",
-        "    for file in tqdm(os.listdir(dst), desc=desc):\n",
-        "        if file.endswith(\".deb\"):\n",
-        "            subprocess.run([\"dpkg\", \"-i\", os.path.join(dst, file)], stdout=subprocess.DEVNULL)\n",
-        "    \n",
-        "    os.remove(filename)\n",
-        "    shutil.rmtree(dst)\n",
-        "\n",
-        "def parse_args(config):\n",
-        "    args = []\n",
-        "\n",
-        "    for k, v in config.items():\n",
-        "        if k.startswith(\"_\"):\n",
-        "            args.append(f\"{v}\")\n",
-        "        elif isinstance(v, str) and v is not None:\n",
-        "            args.append(f'--{k}={v}')\n",
-        "        elif isinstance(v, bool) and v:\n",
-        "            args.append(f\"--{k}\")\n",
-        "        elif isinstance(v, float) and not isinstance(v, bool):\n",
-        "            args.append(f\"--{k}={v}\")\n",
-        "        elif isinstance(v, int) and not isinstance(v, bool):\n",
-        "            args.append(f\"--{k}={v}\")\n",
-        "\n",
-        "    return args\n",
-        "\n",
-        "def aria2_download(dir, filename, url):\n",
-        "    hf_token    = \"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\"\n",
-        "    user_header = f\"Authorization: Bearer {hf_token}\"\n",
-        "\n",
-        "    aria2_config = {\n",
-        "        \"console-log-level\"         : \"error\",\n",
-        "        \"summary-interval\"          : 10,\n",
-        "        \"header\"                    : user_header if \"huggingface.co\" in url else None,\n",
-        "        \"continue\"                  : True,\n",
-        "        \"max-connection-per-server\" : 16,\n",
-        "        \"min-split-size\"            : \"1M\",\n",
-        "        \"split\"                     : 16,\n",
-        "        \"dir\"                       : dir,\n",
-        "        \"out\"                       : filename,\n",
-        "        \"_url\"                      : url,\n",
-        "    }\n",
-        "    aria2_args = parse_args(aria2_config)\n",
-        "    subprocess.run([\"aria2c\", *aria2_args])\n",
-        "\n",
         "def lz4_extract(package_name, target_directory, overwrite=False):\n",
         "    tar_args = [\"tar\", \"-xI\", \"lz4\", \"-f\", package_name, \"--directory\", target_directory]\n",
         "    if overwrite:\n",
@@ -323,15 +172,15 @@
         "    subprocess.run(tar_args)\n",
         "\n",
         "def pre_download(dir, urls, desc, overwrite=False):\n",
-        "    gpu_info          = get_gpu_info()\n",
-        "    version           = get_python_version()\n",
+        "    gpu_info          = py_utils.get_gpu_info()\n",
+        "    version           = py_utils.get_python_version()\n",
         "    xformers_version  = \"0.0.19\"\n",
         "    python_path       = f\"/usr/local/lib/python{version}/dist-packages/\"\n",
         "    ffmpy_path        = os.path.join(python_path, \"ffmpy-0.3.0.dist-info\")\n",
         "\n",
         "    for url in tqdm(urls, desc=desc):\n",
-        "        filename  = get_filename(url)\n",
-        "        aria2_download(dir, filename, url)\n",
+        "        filename  = py_utils.get_filename(url)\n",
+        "        aria2_download(dir, filename, url, quiet=True)\n",
         "        if filename == f\"{repo_type.lower()}-webui-deps.tar.lz4\":\n",
         "            lz4_extract(filename, python_path, overwrite=True)\n",
         "        else:\n",
@@ -359,8 +208,6 @@
         "        subprocess.run([\"apt\", \"install\",  'libunwind8-dev', \"-y\"], check=True)\n",
         "        ubuntu_deps(ram_patch_url, deps_dir, cprint(\"Installing RAM allocation patch\", color=\"green\", tqdm_desc=True))\n",
         "        os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
-        "\n",
-        "import shutil\n",
         "\n",
         "def install_webui(repo_dir, desc):\n",
         "    try:\n",
@@ -407,46 +254,6 @@
         "    except Exception as e:\n",
         "        cprint(\"An error occurred while resetting the commit hash:\", e, color=\"green\")\n",
         "\n",
-        "def update_web_ui(dir):\n",
-        "    try:\n",
-        "        subprocess.run(['git', 'pull', '-X', 'theirs', '--rebase', '--autostash'], cwd=dir)\n",
-        "    except Exception as e:\n",
-        "        cprint(\"\\033[1;32mAn error occurred when updating Web UI:\", e, color=\"green\")\n",
-        "\n",
-        "def update_extensions(extensions_dir, desc):\n",
-        "    start_time = time.time()\n",
-        "\n",
-        "    cprint()\n",
-        "\n",
-        "    skipped_extensions = []\n",
-        "    extensions_updated = []\n",
-        "\n",
-        "    extensions_list = os.listdir(extensions_dir)\n",
-        "    total = len(extensions_list) - len(skipped_extensions) - 1\n",
-        "\n",
-        "    with tqdm(total=total, desc=desc, mininterval=0) as pbar:\n",
-        "        for dir_name in os.listdir(extensions_dir):\n",
-        "            if os.path.isdir(os.path.join(extensions_dir, dir_name)):\n",
-        "                dir_path = os.path.join(extensions_dir, dir_name)\n",
-        "                if dir_name not in skipped_extensions:\n",
-        "                    try:\n",
-        "                        result = subprocess.run(\"git fetch origin && git pull\", shell=True, check=True, cwd=dir_path, capture_output=True)\n",
-        "                        if \"Already up to date.\" not in result.stdout.decode():\n",
-        "                            extensions_updated.append(dir_name)\n",
-        "                    except subprocess.CalledProcessError as error:\n",
-        "                        cprint(f\"An error occurred while updating {dir_name}: {error}\", color=\"green\")\n",
-        "\n",
-        "                    pbar.update(1)\n",
-        "\n",
-        "    cprint()\n",
-        "    for ext in extensions_updated:\n",
-        "        cprint(f\"- {ext} updated to new version\", color=\"green\")\n",
-        "    for ext in skipped_extensions:\n",
-        "        cprint(f\"- {ext} skipped\", color=\"green\")\n",
-        "\n",
-        "    elapsed_time = calculate_elapsed_time(start_time)\n",
-        "    cprint(f\"\\nAll extensions are up to date. Took {elapsed_time}.\", color=\"green\")\n",
-        "\n",
         "def configure_output_path(config_path, output_dir, output_subdir):\n",
         "    config = read_config(config_path)\n",
         "    config_updates = {\n",
@@ -472,16 +279,6 @@
         "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
         "    os.environ[\"PYTHONWARNINGS\"]          = \"ignore\"\n",
         "\n",
-        "def calculate_elapsed_time(start_time):\n",
-        "    end_time = time.time()\n",
-        "    elapsed_time = int(end_time - start_time)\n",
-        "\n",
-        "    if elapsed_time < 60:\n",
-        "        return f\"{elapsed_time} sec\"\n",
-        "    else:\n",
-        "        mins, secs = divmod(elapsed_time, 60)\n",
-        "        return f\"{mins} mins {secs} sec\"\n",
-        "\n",
         "def main():\n",
         "    global output_dir\n",
         "\n",
@@ -490,23 +287,29 @@
         "    \n",
         "    output_dir = mount_func(drive_dir)\n",
         "\n",
-        "    get_gpu_info(get_gpu_name=True)\n",
-        "    get_python_version(verbose=True)\n",
-        "    get_torch_version()\n",
+        "    gpu_info    = py_utils.get_gpu_info(get_gpu_name=True)\n",
+        "    python_info = py_utils.get_python_version()\n",
+        "    torch_info  = py_utils.get_torch_version()\n",
         "\n",
-        "    cprint()\n",
+        "    print_line = \"============================================================================================\"\n",
+        "\n",
+        "    cprint(print_line, color=\"green\")\n",
+        "    cprint(f\"Current GPU:\", gpu_info, color=\"green\")\n",
+        "    cprint(f\"Python\", python_info, color=\"green\")\n",
+        "    cprint(f\"Torch\", torch_info, color=\"green\")\n",
+        "    cprint(print_line, color=\"green\")\n",
         "\n",
         "    install_dependencies()\n",
+        "\n",
+        "    cprint(print_line, color=\"green\")\n",
         "    install_webui(repo_dir, cprint(f\"Unpacking {repo_type} Webui\", color=\"green\", tqdm_desc=True))\n",
         "    prepare_environment()\n",
         "    setup_directories ()\n",
         "    configure_output_path(config_file, output_dir, output_subdir)\n",
         "\n",
-        "    cprint()\n",
-        "\n",
+        "    cprint(print_line, color=\"green\")\n",
         "    if update_webui and not commit_hash:\n",
-        "        cprint(f\"Updating Web UI...\", color=\"green\")\n",
-        "        update_web_ui(repo_dir)\n",
+        "        update_repo(cwd=repo_dir, args=\"-X theirs --rebase --autostash\")\n",
         "\n",
         "    if commit_hash:\n",
         "        reset_commit_hash(repo_dir, commit_hash)\n",
@@ -514,6 +317,8 @@
         "    repo_name, current_commit_hash, current_branch = validate_repo(repo_dir)\n",
         "    cprint(f\"Using '{repo_name}' repository...\", color=\"green\")\n",
         "    cprint(f\"Branch: {current_branch}, Commit hash: {current_commit_hash}\", color=\"green\")\n",
+        "\n",
+        "    cprint(print_line, color=\"green\")\n",
         "\n",
         "    if dpm_v2_patch:\n",
         "        os.makedirs(patches_dir)\n",
@@ -528,13 +333,14 @@
         "        subprocess.run([\"sed\", \"-i\", f\"s@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@\", os.path.join(repo_dir, \"webui.py\")])\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@map_location='cpu'@map_location='cuda'@\", os.path.join(repo_dir, \"modules/extras.py\")])\n",
         "\n",
-        "    elapsed_time = calculate_elapsed_time(start_time)\n",
-        "    cprint(f\"\\nFinished unpacking. Took {elapsed_time}.\", color=\"green\")\n",
-        "\n",
         "    if update_extensions:\n",
-        "        update_extensions(extensions_dir, cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
-        "    \n",
+        "        batch_update(fetch=True, directory=extensions_dir,desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
+        "\n",
+        "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
+        "    cprint(print_line, color=\"green\")\n",
+        "    cprint(f\"Finished installation. Took {elapsed_time}.\", color=\"green\")\n",
         "    cprint(\"All is done! Go to the next step.\", color=\"green\")\n",
+        "    cprint(print_line, color=\"green\")\n",
         "\n",
         "main()"
       ],
