fix: skip lycoris for the meantime

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -329,7 +329,7 @@
         "        print(\"\u001b[1;32mInstalling 'Tsukreya/Umi-AI-debloat'\")\n",
         "        install_umi_ai()\n",
         "    \n",
-        "    skipped_extensions = []\n",
+        "    skipped_extensions = [\"a1111-sd-webui-lycoris\"]\n",
         "    \n",
         "    end_time = time.time()\n",
         "    elapsed_time = int(end_time - start_time)\n",
