--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -40,28 +40,17 @@
       "source": [
         "# @title ## **Install Cagliostro Colab UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#install-stable-diffusion-web-ui)</small></small>\n",
         "import os\n",
-        "import shutil\n",
-        "import zipfile\n",
         "import time\n",
         "import json\n",
-        "import fileinput\n",
         "import base64\n",
+        "import shutil\n",
         "import subprocess\n",
-        "import platform\n",
-        "import re\n",
-        "import sys\n",
-        "import torch\n",
-        "import requests\n",
-        "from urllib.parse import urlparse, unquote\n",
-        "from google.colab import drive\n",
-        "from datetime import timedelta\n",
         "from google.colab.output import eval_js\n",
-        "from IPython.display import clear_output, display, HTML\n",
         "from IPython.utils import capture\n",
         "from tqdm import tqdm\n",
         "subprocess.run(['pip', 'install', '--upgrade', 'git+https://github.com/Linaqruf/colablib'])\n",
         "from colablib.colored_print import cprint\n",
-        "from colablib.utils import py_utils as py_utils\n",
+        "from colablib.utils import py_utils, config_utils, package_utils\n",
         "from colablib.utils.ubuntu_utils import ubuntu_deps\n",
         "from colablib.sd_models.downloader import aria2_download\n",
         "from colablib.utils.git_utils import update_repo, batch_update, validate_repo\n",
@@ -75,17 +64,17 @@
         "patches_dir         = os.path.join(root_dir, \"patches\")\n",
         "deps_dir            = os.path.join(root_dir, \"deps\")\n",
         "fused_dir           = os.path.join(root_dir, \"fused\")\n",
-        "drive_dir           = os.path.join(root_dir, \"drive/MyDrive\")\n",
+        "drive_dir           = os.path.join(root_dir, \"drive\", \"MyDrive\")\n",
         "\n",
         "# repository directory\n",
-        "models_dir          = os.path.join(repo_dir, \"models/Stable-diffusion\")\n",
-        "vaes_dir            = os.path.join(repo_dir, \"models/VAE\")\n",
-        "hypernetworks_dir   = os.path.join(repo_dir, \"models/hypernetworks\")\n",
+        "models_dir          = os.path.join(repo_dir, \"models\", \"Stable-diffusion\")\n",
+        "vaes_dir            = os.path.join(repo_dir, \"models\", \"VAE\")\n",
+        "hypernetworks_dir   = os.path.join(repo_dir, \"models\", \"hypernetworks\")\n",
+        "lora_dir            = os.path.join(repo_dir, \"models\", \"Lora\")\n",
+        "control_dir         = os.path.join(repo_dir, \"models\", \"ControlNet\")\n",
+        "esrgan_dir          = os.path.join(repo_dir, \"models\", \"ESRGAN\")\n",
         "embeddings_dir      = os.path.join(repo_dir, \"embeddings\")\n",
         "extensions_dir      = os.path.join(repo_dir, \"extensions\")\n",
-        "lora_dir            = os.path.join(repo_dir, \"models/Lora\")\n",
-        "control_dir         = os.path.join(repo_dir, \"models/ControlNet\")\n",
-        "esrgan_dir          = os.path.join(repo_dir, \"models/ESRGAN\")\n",
         "\n",
         "# file path\n",
         "config_file         = os.path.join(repo_dir, \"config.json\")\n",
@@ -96,11 +85,12 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
         "# @markdown ### **Repo Config**\n",
-        "repo_type           = \"AUTOMATIC1111-Dev\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\", \"Vladmandic\"]\n",
+        "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\", \"Vladmandic\"]\n",
         "update_webui        = True  # @param {type:'boolean'}\n",
         "update_extensions   = True  # @param {type:'boolean'}\n",
         "commit_hash         = \"\"  # @param {type:'string'}\n",
         "dpm_v2_patch        = False  # @param {type:'boolean'}\n",
+        "\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
@@ -114,8 +104,20 @@
         "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type.lower()}-webui-cache.tar.lz4\",\n",
         "]\n",
         "\n",
+        "repo_type_to_repo_name = {\n",
+        "    \"anapnoe\"           : f\"anapnoe/{voldemort}-ux\",\n",
+        "    \"automatic1111\"     : f\"AUTOMATIC1111/{voldemort}\",\n",
+        "    \"automatic1111-dev\" : f\"AUTOMATIC1111/{voldemort}\",\n",
+        "    \"vladmandic\"        : f\"vladmandic/automatic\"\n",
+        "}\n",
+        "\n",
+        "branch_type_to_branch = {\n",
+        "    \"automatic1111\": \"master\",\n",
+        "    \"automatic1111-dev\": \"dev\"\n",
+        "}\n",
+        "\n",
         "if repo_type.lower() == \"vladmandic\":\n",
-        "    embeddings_dir      = os.path.join(repo_dir, \"models/embeddings\")\n",
+        "    embeddings_dir      = os.path.join(repo_dir, \"models\", \"embeddings\")\n",
         "    output_subdir       = [\"text\", \"images\", \"extras\", \"grids\", \"save\"]\n",
         "    dpm_v2_patch        = False\n",
         "    update_webui        = False\n",
@@ -128,23 +130,6 @@
         "                \"lora_dir\", \"control_dir\", \"esrgan_dir\"]:\n",
         "        %store {dir}\n",
         "    del cap\n",
-        "\n",
-        "def read_config(filename):\n",
-        "    if filename.endswith(\".json\"):\n",
-        "        with open(filename, \"r\") as f:\n",
-        "          config = json.load(f)\n",
-        "    else:\n",
-        "        with open(filename, 'r') as f:\n",
-        "          config = f.read()\n",
-        "    return config\n",
-        "\n",
-        "def write_config(filename, config):\n",
-        "    if filename.endswith(\".json\"):\n",
-        "        with open(filename, \"w\") as f:\n",
-        "            json.dump(config, f, indent=4)\n",
-        "    else:\n",
-        "        with open(filename, 'w', encoding=\"utf-8\") as f:\n",
-        "            f.write(config)\n",
         "\n",
         "def mount_func(directory):\n",
         "    output_dir          = os.path.join(repo_dir, \"outputs\")\n",
@@ -165,12 +150,6 @@
         "                lora_dir, control_dir, esrgan_dir]:\n",
         "        os.makedirs(dir, exist_ok=True)\n",
         "\n",
-        "def lz4_extract(package_name, target_directory, overwrite=False):\n",
-        "    tar_args = [\"tar\", \"-xI\", \"lz4\", \"-f\", package_name, \"--directory\", target_directory]\n",
-        "    if overwrite:\n",
-        "        tar_args.append(\"--overwrite-dir\")\n",
-        "    subprocess.run(tar_args)\n",
-        "\n",
         "def pre_download(dir, urls, desc, overwrite=False):\n",
         "    gpu_info          = py_utils.get_gpu_info()\n",
         "    version           = py_utils.get_python_version()\n",
@@ -182,9 +161,9 @@
         "        filename  = py_utils.get_filename(url)\n",
         "        aria2_download(dir, filename, url, quiet=True)\n",
         "        if filename == f\"{repo_type.lower()}-webui-deps.tar.lz4\":\n",
-        "            lz4_extract(filename, python_path, overwrite=True)\n",
+        "            package_utils.extract_package(filename, python_path, overwrite=True)\n",
         "        else:\n",
-        "            lz4_extract(filename, \"/\", overwrite=overwrite)\n",
+        "            package_utils.extract_package(filename, \"/\", overwrite=overwrite)\n",
         "        os.remove(filename)\n",
         "\n",
         "    if os.path.exists(ffmpy_path):\n",
@@ -213,38 +192,21 @@
         "    try:\n",
         "        if not os.path.exists(repo_dir):\n",
         "            pre_download(root_dir, package_url, desc, overwrite=False)\n",
-        "        else:\n",
-        "            repo_name, _, current_branch, = validate_repo(repo_dir)\n",
-        "            \n",
-        "            if repo_type.lower() == \"anapnoe\":\n",
-        "                if repo_name == f\"anapnoe/{voldemort}-ux\":\n",
-        "                    cprint(f\"'{repo_name}' already installed, skipping...\", color=\"green\")\n",
-        "                else:\n",
-        "                    cprint(f\"Another repository exist. Uninstall '{repo_name}'...\", color=\"green\")\n",
-        "                    shutil.rmtree(repo_dir)  \n",
-        "                    pre_download(root_dir, package_url, desc, overwrite=True)\n",
-        "            elif repo_type.lower() == \"automatic1111\":\n",
-        "                if repo_name == f\"AUTOMATIC1111/{voldemort}\" and current_branch == \"master\":\n",
-        "                    cprint(f\"'{repo_name}' {current_branch} branch already installed, skipping...\", color=\"green\")\n",
-        "                else:\n",
-        "                    cprint(f\"Another repository exist. Uninstall '{repo_name}'...\", color=\"green\")\n",
-        "                    shutil.rmtree(repo_dir)  \n",
-        "                    pre_download(root_dir, package_url, desc, overwrite=True)\n",
-        "            elif repo_type.lower() == \"automatic1111-dev\":\n",
-        "                if repo_name == f\"AUTOMATIC1111/{voldemort}\" and current_branch == \"dev\":\n",
-        "                    cprint(f\"'{repo_name}' {current_branch} branch already installed, skipping...\", color=\"green\")\n",
-        "                else:\n",
-        "                    cprint(f\"Another repository exist. Uninstall '{repo_name}'...\", color=\"green\")\n",
-        "                    shutil.rmtree(repo_dir)  \n",
-        "                    pre_download(root_dir, package_url, desc, overwrite=True)\n",
-        "            if repo_type.lower() == \"vladmandic\":\n",
-        "                if repo_name == f\"vladmandic/automatic\":\n",
-        "                    cprint(f\"'{repo_name}' already installed, skipping...\", color=\"green\")\n",
-        "                else:\n",
-        "                    cprint(f\"Another repository exist. Uninstall '{repo_name}'...\", color=\"green\")\n",
-        "                    shutil.rmtree(repo_dir)  \n",
-        "                    pre_download(root_dir, package_url, desc, overwrite=True)\n",
+        "            return\n",
+        "        \n",
+        "        repo_name, _, current_branch = validate_repo(repo_dir)\n",
+        "        repo_type_lower = repo_type.lower()\n",
+        "        expected_repo_name = repo_type_to_repo_name.get(repo_type_lower)\n",
+        "        \n",
+        "        if expected_repo_name == repo_name:\n",
+        "            expected_branch = branch_type_to_branch.get(repo_type_lower)\n",
+        "            if expected_branch is None or expected_branch == current_branch:\n",
+        "                cprint(f\"'{repo_name}' {current_branch if expected_branch else ''} already installed, skipping...\", color=\"green\")\n",
+        "                return\n",
         "\n",
+        "        cprint(f\"Another repository exist. Uninstall '{repo_name}'...\", color=\"green\")\n",
+        "        shutil.rmtree(repo_dir)  \n",
+        "        pre_download(root_dir, package_url, desc)\n",
         "    except Exception as e:\n",
         "        cprint(f\"An error occurred: {e}\", color=\"green\")\n",
         "\n",
@@ -255,7 +217,7 @@
         "        cprint(\"An error occurred while resetting the commit hash:\", e, color=\"green\")\n",
         "\n",
         "def configure_output_path(config_path, output_dir, output_subdir):\n",
-        "    config = read_config(config_path)\n",
+        "    config = config_utils.read_config(config_path)\n",
         "    config_updates = {\n",
         "        \"outdir_txt2img_samples\"  : os.path.join(output_dir, output_subdir[0]),\n",
         "        \"outdir_img2img_samples\"  : os.path.join(output_dir, output_subdir[1]),\n",
@@ -265,7 +227,7 @@
         "    }\n",
         "\n",
         "    config.update(config_updates)\n",
-        "    write_config(config_path, config)\n",
+        "    config_utils.write_config(config_path, config)\n",
         "\n",
         "    for dir in output_subdir:\n",
         "        os.makedirs(os.path.join(output_dir, dir), exist_ok=True)\n",
@@ -334,7 +296,7 @@
         "        subprocess.run([\"sed\", \"-i\", f\"s@map_location='cpu'@map_location='cuda'@\", os.path.join(repo_dir, \"modules/extras.py\")])\n",
         "\n",
         "    if update_extensions:\n",
-        "        batch_update(fetch=True, directory=extensions_dir,desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
+        "        batch_update(fetch=True,directory=extensions_dir,desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
         "\n",
         "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
         "    cprint(print_line, color=\"green\")\n",
@@ -347,6 +309,17 @@
       "metadata": {
         "id": "A6c7-qjDdb0X",
         "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!rm -rf /content/cagliostro-colab-ui"
+      ],
+      "metadata": {
+        "id": "J5zZxmNfbmpd"
       },
       "execution_count": null,
       "outputs": []
@@ -451,8 +424,7 @@
         "print(\"\u001b[1;32mAll is done! Go to the next step\")\n"
       ],
       "metadata": {
-        "id": "qgvihy5BQ3II",
-        "cellView": "form"
+        "id": "qgvihy5BQ3II"
       },
       "execution_count": null,
       "outputs": []
