--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -57,16 +57,42 @@
         "\n",
         "%store -r\n",
         "\n",
-        "# root directory\n",
+        "################################\n",
+        "# COLAB ARGUMENTS GOES HERE\n",
+        "################################\n",
+        "\n",
+        "# @markdown ### **Drive Config**\n",
+        "mount_drive         = False  # @param {type:'boolean'}\n",
+        "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
+        "launch_in_drive     = False  # @param {type:'boolean'}\n",
+        "# @markdown ### **Repo Config**\n",
+        "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\", \"Vladmandic\"]\n",
+        "update_webui        = True  # @param {type:'boolean'}\n",
+        "update_extensions   = True  # @param {type:'boolean'}\n",
+        "commit_hash         = \"\"  # @param {type:'string'}\n",
+        "dpm_v2_patch        = False  # @param {type:'boolean'}\n",
+        "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
+        "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
+        "colab_optimizations = True  # @param {type:'boolean'}\n",
+        "\n",
+        "################################\n",
+        "# DIRECTORY CONFIG\n",
+        "################################\n",
+        "\n",
+        "# ROOT DIR\n",
         "root_dir            = \"/content\"\n",
+        "drive_dir           = os.path.join(root_dir, \"drive\", \"MyDrive\")\n",
+        "\n",
+        "if launch_in_drive:\n",
+        "    root_dir        = drive_dir\n",
+        "\n",
         "repo_dir            = os.path.join(root_dir, \"cagliostro-colab-ui\")\n",
         "tmp_dir             = os.path.join(root_dir, \"tmp\")\n",
         "patches_dir         = os.path.join(root_dir, \"patches\")\n",
         "deps_dir            = os.path.join(root_dir, \"deps\")\n",
         "fused_dir           = os.path.join(root_dir, \"fused\")\n",
-        "drive_dir           = os.path.join(root_dir, \"drive\", \"MyDrive\")\n",
         "\n",
-        "# repository directory\n",
+        "# REPO DIR\n",
         "models_dir          = os.path.join(repo_dir, \"models\", \"Stable-diffusion\")\n",
         "vaes_dir            = os.path.join(repo_dir, \"models\", \"VAE\")\n",
         "hypernetworks_dir   = os.path.join(repo_dir, \"models\", \"hypernetworks\")\n",
@@ -75,28 +101,16 @@
         "esrgan_dir          = os.path.join(repo_dir, \"models\", \"ESRGAN\")\n",
         "embeddings_dir      = os.path.join(repo_dir, \"embeddings\")\n",
         "extensions_dir      = os.path.join(repo_dir, \"extensions\")\n",
-        "\n",
-        "# file path\n",
         "config_file         = os.path.join(repo_dir, \"config.json\")\n",
         "style_path          = os.path.join(repo_dir, \"style.css\")\n",
         "\n",
-        "# @markdown ### **Drive Config**\n",
-        "mount_drive         = False  # @param {type:'boolean'}\n",
-        "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
-        "\n",
-        "# @markdown ### **Repo Config**\n",
-        "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\", \"Vladmandic\"]\n",
-        "update_webui        = True  # @param {type:'boolean'}\n",
-        "update_extensions   = True  # @param {type:'boolean'}\n",
-        "commit_hash         = \"\"  # @param {type:'string'}\n",
-        "dpm_v2_patch        = False  # @param {type:'boolean'}\n",
-        "\n",
-        "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
-        "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
-        "colab_optimizations = True  # @param {type:'boolean'}\n",
-        "\n",
+        "# VAR\n",
         "voldemort           = base64.b64decode((\"'c3RhYmxlLWRpZmZ1c2lvbi13ZWJ1aQ=='\").encode('ascii')).decode('ascii')\n",
         "output_subdir       = [\"txt2img-images\", \"img2img-images\", \"extras-images\", \"txt2img-grids\", \"img2img-grids\"]\n",
+        "\n",
+        "################################\n",
+        "# REPO TYPE CONFIG\n",
+        "################################\n",
         "\n",
         "package_url = [\n",
         "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type.lower()}-webui.tar.lz4\",\n",
@@ -112,8 +126,8 @@
         "}\n",
         "\n",
         "branch_type_to_branch = {\n",
-        "    \"automatic1111\": \"master\",\n",
-        "    \"automatic1111-dev\": \"dev\"\n",
+        "    \"automatic1111\"     : \"master\",\n",
+        "    \"automatic1111-dev\" : \"dev\"\n",
         "}\n",
         "\n",
         "if repo_type.lower() == \"vladmandic\":\n",
@@ -132,7 +146,7 @@
         "    del cap\n",
         "\n",
         "def mount_func(directory):\n",
-        "    output_dir          = os.path.join(repo_dir, \"outputs\")\n",
+        "    output_dir = os.path.join(repo_dir, \"outputs\")\n",
         "\n",
         "    if mount_drive:\n",
         "        if not os.path.exists(directory):\n",
@@ -296,7 +310,7 @@
         "        subprocess.run([\"sed\", \"-i\", f\"s@map_location='cpu'@map_location='cuda'@\", os.path.join(repo_dir, \"modules/extras.py\")])\n",
         "\n",
         "    if update_extensions:\n",
-        "        batch_update(fetch=True,directory=extensions_dir,desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
+        "        batch_update(fetch=True, directory=extensions_dir, desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
         "\n",
         "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
         "    cprint(print_line, color=\"green\")\n",
@@ -896,8 +910,7 @@
         "custom_download_list = []"
       ],
       "metadata": {
-        "id": "PdjuRPcX0-Q2",
-        "cellView": "form"
+        "id": "PdjuRPcX0-Q2"
       },
       "execution_count": null,
       "outputs": []
