--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -412,13 +412,14 @@
         "\n",
         "# @markdown ### **SD v1.x Model**\n",
         "anything_v3_0 = False  # @param {type: 'boolean'}\n",
-        "ghost_note = True  # @param {type: 'boolean'}\n",
         "anylora = False  # @param {type: 'boolean'}\n",
-        "lunar_dream_v2  = False  # @param {type: 'boolean'}\n",
-        "majic_mix_v4 = False  # @param {type: 'boolean'}\n",
+        "anylora_anime_mix = False  # @param {type: 'boolean'}\n",
+        "ghost_note = True  # @param {type: 'boolean'}\n",
+        "\n",
+        "SDHK_v3  = False  # @param {type: 'boolean'}\n",
+        "majic_mix_v5 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **SD v2.x 768v Model**\n",
         "replicant_v3 = False  # @param {type: 'boolean'}\n",
-        "waifu_diffusion_v1_5_illusion = False  # @param {type: 'boolean'}\n",
         "illuminati_diffusion_v1_1 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **VAE Model**\n",
         "anime = False  # @param {type: 'boolean'}\n",
@@ -431,12 +432,12 @@
         "\n",
         "models = [\n",
         "    (\"anything_v3_0\", \"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/anything-v3-fp16-pruned.safetensors\"),\n",
-        "    (\"ghost_note\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/GhostNoteDelta_m0528_fp16.safetensors\"),\n",
         "    (\"anylora\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/AnyLoRA_noVae_fp16-pruned.safetensors\"),\n",
-        "    (\"lunar_dream_v2\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/ALunarDreamV2.0.safetensors\"),\n",
-        "    (\"majic_mix_v4\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/majicmixRealistic_v4.safetensors\"),\n",
+        "    (\"anylora_anime_mix\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/aamAnyloraAnimeMixAnime_v10-fp16-pruned.safetensors\"),\n",
+        "    (\"ghost_note\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/GhostNoteDelta_m0528_fp16.safetensors\"),\n",
+        "    (\"SDHK_v3\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/sdhk_v30.safetensors\"),\n",
+        "    (\"majic_mix_v5\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/fp16/majicmixRealistic_v5.safetensors\"),\n",
         "    (\"replicant_v3\", \"https://huggingface.co/gsdf/Replicant-V3.0/resolve/main/Replicant-V3.0_fp16.safetensors\"),\n",
-        "    (\"waifu_diffusion_v1_5_illusion\", \"https://huggingface.co/waifu-diffusion/wd-1-5-beta3/resolve/main/wd-illusion-fp16.safetensors\"),\n",
         "    (\"illuminati_diffusion_v1_1\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/illuminatiDiffusionV1_v11.safetensors\"),\n",
         "]\n",
         "\n",
@@ -725,7 +726,7 @@
         "custom_embedding_url = \"\"  # @param {'type': 'string'}\n",
         "custom_LoRA_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/network_weight/GoodHands-beta2.safetensors\"  # @param {'type': 'string'}\n",
         "custom_hypernetwork_url = \"\"  # @param {'type': 'string'}\n",
-        "custom_extensions_url = \"\"  # @param {'type': 'string'}\n",
+        "custom_extensions_url = \"https://github.com/Zuellni/Stable-Diffusion-WebUI-Image-Filters\"  # @param {'type': 'string'}\n",
         "custom_upscaler_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-Superscale-SP_178000_G.pth, https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x_NMKD-YandereNeoXL_200k.pth\"  # @param {'type': 'string'}\n",
         "\n",
         "custom_download_list = []\n",
