fix: use reset_repo() from colablib

--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -53,7 +53,7 @@
         "from colablib.utils import py_utils, config_utils, package_utils\n",
         "from colablib.utils.ubuntu_utils import ubuntu_deps\n",
         "from colablib.sd_models.downloader import aria2_download\n",
-        "from colablib.utils.git_utils import update_repo, batch_update, validate_repo\n",
+        "from colablib.utils.git_utils import update_repo, batch_update, validate_repo, reset_repo\n",
         "\n",
         "%store -r\n",
         "\n",
@@ -167,7 +167,7 @@
         "def pre_download(dir, urls, desc, overwrite=False):\n",
         "    gpu_info          = py_utils.get_gpu_info()\n",
         "    version           = py_utils.get_python_version()\n",
-        "    xformers_version  = \"0.0.19\"\n",
+        "    xformers_version  = \"0.0.20\"\n",
         "    python_path       = f\"/usr/local/lib/python{version}/dist-packages/\"\n",
         "    ffmpy_path        = os.path.join(python_path, \"ffmpy-0.3.0.dist-info\")\n",
         "\n",
@@ -223,12 +223,6 @@
         "        pre_download(root_dir, package_url, desc)\n",
         "    except Exception as e:\n",
         "        cprint(f\"An error occurred: {e}\", color=\"green\")\n",
-        "\n",
-        "def reset_commit_hash(dir, commit_hash):\n",
-        "    try:\n",
-        "        subprocess.run(['git', 'reset', '--hard', commit_hash], cwd=dir)\n",
-        "    except Exception as e:\n",
-        "        cprint(\"An error occurred while resetting the commit hash:\", e, color=\"green\")\n",
         "\n",
         "def configure_output_path(config_path, output_dir, output_subdir):\n",
         "    config = config_utils.read_config(config_path)\n",
@@ -288,7 +282,7 @@
         "        update_repo(cwd=repo_dir, args=\"-X theirs --rebase --autostash\")\n",
         "\n",
         "    if commit_hash:\n",
-        "        reset_commit_hash(repo_dir, commit_hash)\n",
+        "        reset_repo(repo_dir, commit_hash)\n",
         "\n",
         "    repo_name, current_commit_hash, current_branch = validate_repo(repo_dir)\n",
         "    cprint(f\"Using '{repo_name}' repository...\", color=\"green\")\n",
@@ -305,9 +299,9 @@
         "        shutil.rmtree(patches_dir)\n",
         "\n",
         "    if colab_optimizations:\n",
-        "        subprocess.run([\"sed\", \"-i\", f\"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\", os.path.join(repo_dir, \"modules/sd_models.py\")])\n",
+        "        subprocess.run([\"sed\", \"-i\", f\"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\", os.path.join(repo_dir, \"modules\", \"sd_models.py\")])\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@\", os.path.join(repo_dir, \"webui.py\")])\n",
-        "        subprocess.run([\"sed\", \"-i\", f\"s@map_location='cpu'@map_location='cuda'@\", os.path.join(repo_dir, \"modules/extras.py\")])\n",
+        "        subprocess.run([\"sed\", \"-i\", f\"s@map_location='cpu'@map_location='cuda'@\", os.path.join(repo_dir, \"modules\", \"extras.py\")])\n",
         "\n",
         "    if update_extensions:\n",
         "        batch_update(fetch=True, directory=extensions_dir, desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
@@ -910,7 +904,8 @@
         "custom_download_list = []"
       ],
       "metadata": {
-        "id": "PdjuRPcX0-Q2"
+        "id": "PdjuRPcX0-Q2",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
